--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
             <div id="displayscreen"></div>
             </div>
             <div id="displaybuttons">
-                <button class="buttons btnop" id="*">*</button>
-                <button class="buttons btnop" id="/">/</button>
-                <button class="buttons btnop" id="-">-</button>
-                <button class="buttons btnop" id="+">+</button>
+                <button class="buttons functionality clear" id="CLEAR">CLEAR</button>
+                <button class="buttons functionality posneg" id="POSNEG">+/-</button>
+                <button class="buttons functionality supp" id="Delete">SUPP</button>
+                <button class="buttons btnop" id="%">%</button>
                 <button class="buttons numb" id="7">7</button>
                 <button class="buttons numb" id="8">8</button>
                 <button class="buttons numb" id="9">9</button>
-                <button class="buttons numb" id="0">0</button>
+                <button class="buttons btnop" id="*">X</button>
                 <button class="buttons numb" id="4">4</button>
                 <button class="buttons numb" id="5">5</button>
                 <button class="buttons numb" id="6">6</button>
-                <button class="buttons supp" id="SUPP">SUPP</button>
+                <button class="buttons btnop" id="/">/</button>
                 <button class="buttons numb" id="1">1</button>
                 <button class="buttons numb" id="2">2</button>
                 <button class="buttons numb" id="3">3</button>
-                <button class="buttons numb" id="CLEAR">CLEAR</button>
-                <button class="buttons total" id="TOTAL">=</button>
+                <button class="buttons btnop" id="-">-</button>
+                <button class="buttons numb" id="0">0</button>
+                <button class="buttons deci" id=".">.</button>
+                <button class="buttons total" id="Enter">=</button>
+                <button class="buttons btnop" id="+">+</button>
             </div>
 
 
